--- a/package.json
+++ b/package.json
@@ -3,19 +3,25 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "scripts": {},
+  "scripts": {
+    "Client": "npx playwright test e2e/ClientPageBasicElements.spec.ts",
+    "Project": "npx playwright test e2e/ProjectPageBasicElements.spec.ts",
+    "DB": "npx playwright test e2e/DBConnection.spec.ts"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@cucumber/cucumber": "^10.6.0",
     "@playwright/test": "^1.43.1",
+    "@types/mssql": "^9.1.5",
     "@types/node": "^20.12.7",
     "cucumber": "^6.0.7",
     "ts-node": "^10.9.2"
   },
   "dependencies": {
     "git": "^0.1.5",
+    "mssql": "^11.0.1",
     "typescript": "^5.4.5"
   }
 }
